--- a/full_data/model.ipynb
+++ b/full_data/model.ipynb
@@ -19,76 +19,59 @@
     }
    ],
    "source": [
-    "import json\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import LSTM, Dense, Dropout\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from tensorflow.keras.layers import Dense, LSTM\n",
     "\n",
-    "# 读取JSON数据\n",
-    "with open('./full_data/2024_stock_backtest_data.json', 'r') as f:\n",
-    "    data = json.load(f)\n",
+    "# 读取数据\n",
+    "data = pd.read_csv('/mnt/data/data.txt')\n",
     "\n",
-    "# 数据预处理\n",
-    "stock_data = []\n",
-    "for entry in data:\n",
-    "    for stock in entry['data']:\n",
-    "        stock_data.append({\n",
-    "            'date': entry['date'],\n",
-    "            'code': stock['code'],\n",
-    "            'price': float(stock['price']),\n",
-    "            'market_value': float(stock['market_value'].replace('亿', '')) * 1e8,\n",
-    "            'limit_ups': stock['limit_ups'],\n",
-    "            'limit_downs': stock['limit_downs'],\n",
-    "            'current_opening_increase': float(stock['current_opening_increase'].replace('%', '')) / 100,\n",
-    "            'next_opening_increase': float(stock['next_opening_increase'].replace('%', '')) / 100,\n",
-    "            'next_close_increase': float(stock['next_close_increase'])\n",
-    "        })\n",
+    "# 特征工程\n",
+    "data['moving_avg'] = data['price'].rolling(window=5).mean()\n",
+    "data['return'] = data['price'].pct_change()\n",
     "\n",
-    "df = pd.DataFrame(stock_data)\n",
+    "# 标签生成\n",
+    "data['target'] = np.where(data['return'] > 0, 1, 0)\n",
     "\n",
-    "# 特征提取\n",
-    "df['price_diff'] = df['price'].diff()\n",
-    "df['price_pct_change'] = df['price'].pct_change()\n",
-    "df['market_value_diff'] = df['market_value'].diff()\n",
+    "# 数据拆分\n",
+    "train_data = data[data['date'] < '2023-01-01']\n",
+    "test_data = data[data['date'] >= '2023-01-01']\n",
     "\n",
-    "# 数据标准化\n",
-    "scaler = StandardScaler()\n",
-    "scaled_features = scaler.fit_transform(df[['price', 'price_diff', 'price_pct_change', 'market_value', 'market_value_diff']])\n",
+    "# 数据准备\n",
+    "X_train = train_data[['moving_avg', 'return']].values\n",
+    "y_train = train_data['target'].values\n",
+    "X_test = test_data[['moving_avg', 'return']].values\n",
+    "y_test = test_data['target'].values\n",
     "\n",
-    "# 划分数据集\n",
-    "X = scaled_features[:-1]\n",
-    "y = df['next_close_increase'][1:]\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# 构建LSTM模型\n",
+    "# 模型构建\n",
     "model = Sequential()\n",
-    "model.add(LSTM(50, return_sequences=True, input_shape=(X_train.shape[1], 1)))\n",
-    "model.add(Dropout(0.2))\n",
-    "model.add(LSTM(50, return_sequences=False))\n",
-    "model.add(Dropout(0.2))\n",
-    "model.add(Dense(1))\n",
+    "model.add(Dense(64, input_dim=2, activation='relu'))\n",
+    "model.add(Dense(32, activation='relu'))\n",
+    "model.add(Dense(1, activation='sigmoid'))\n",
     "\n",
-    "model.compile(optimizer='adam', loss='mse')\n",
-    "model.summary()\n",
+    "# 模型编译\n",
+    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
     "\n",
-    "# 训练模型\n",
-    "X_train_reshaped = np.reshape(X_train, (X_train.shape[0], X_train.shape[1], 1))\n",
-    "X_test_reshaped = np.reshape(X_test, (X_test.shape[0], X_test.shape[1], 1))\n",
+    "# 模型训练\n",
+    "model.fit(X_train, y_train, epochs=10, batch_size=32, validation_data=(X_test, y_test))\n",
     "\n",
-    "model.fit(X_train_reshaped, y_train, epochs=50, batch_size=32, validation_data=(X_test_reshaped, y_test))\n",
+    "# 模型评估\n",
+    "loss, accuracy = model.evaluate(X_test, y_test)\n",
+    "print(f'Loss: {loss}, Accuracy: {accuracy}')\n",
     "\n",
-    "# 评估模型\n",
-    "predictions = model.predict(X_test_reshaped)\n",
-    "print(\"模型评估：\")\n",
-    "print(\"均方误差（MSE）：\", np.mean((predictions - y_test)**2))\n",
+    "# 生成交易信号\n",
+    "test_data['prediction'] = model.predict(X_test)\n",
+    "test_data['signal'] = np.where(test_data['prediction'] > 0.5, 1, 0)\n",
     "\n",
-    "# 保存模型\n",
-    "model.save('stock_prediction_model.h5')\n"
+    "# 回测\n",
+    "initial_capital = 100000\n",
+    "test_data['portfolio_value'] = initial_capital * (1 + test_data['return'].cumsum())\n",
+    "\n",
+    "# 计算最终收益\n",
+    "final_value = test_data['portfolio_value'].iloc[-1]\n",
+    "print(f'Final Portfolio Value: {final_value}')\n"
    ]
   }
  ],
